--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -28,7 +28,7 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>649</width>
+         <width>645</width>
          <height>489</height>
         </rect>
        </property>
@@ -167,7 +167,7 @@
        </layout>
       </item>
       <item>
-       <widget class="QPushButton" name="okButton">
+       <widget class="QPushButton" name="buttonGenerate">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -175,7 +175,20 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>OK</string>
+         <string>Generate</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="buttonSolve">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Solve</string>
         </property>
        </widget>
       </item>
@@ -188,17 +201,10 @@
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout">
-        <item row="2" column="1">
-         <widget class="QLabel" name="label2neighbor">
-          <property name="text">
-           <string>0</string>
-          </property>
-         </widget>
-        </item>
         <item row="3" column="1">
          <widget class="QLabel" name="label3neighbor">
           <property name="text">
-           <string>0</string>
+           <string>/</string>
           </property>
          </widget>
         </item>
@@ -206,6 +212,13 @@
          <widget class="QLabel" name="label_9">
           <property name="text">
            <string>3</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QLabel" name="label2neighbor">
+          <property name="text">
+           <string>/</string>
           </property>
          </widget>
         </item>
@@ -236,13 +249,6 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QLabel" name="label1neighbor">
-          <property name="text">
-           <string>0</string>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="1">
          <widget class="QLabel" name="label_3">
           <property name="minimumSize">
@@ -256,17 +262,17 @@
           </property>
          </widget>
         </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="label1neighbor">
+          <property name="text">
+           <string>/</string>
+          </property>
+         </widget>
+        </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_5">
           <property name="text">
            <string>1</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="1">
-         <widget class="QLabel" name="label4neighbor">
-          <property name="text">
-           <string>0</string>
           </property>
          </widget>
         </item>
@@ -283,31 +289,122 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="2">
-         <widget class="QLabel" name="label1neighborpercent">
-          <property name="text">
-           <string>0</string>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="2">
          <widget class="QLabel" name="label2neighborpercent">
           <property name="text">
-           <string>0</string>
+           <string>/</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QLabel" name="label4neighbor">
+          <property name="text">
+           <string>/</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QLabel" name="label1neighborpercent">
+          <property name="text">
+           <string>/</string>
           </property>
          </widget>
         </item>
         <item row="3" column="2">
          <widget class="QLabel" name="label3neighborpercent">
           <property name="text">
-           <string>0</string>
+           <string>/</string>
           </property>
          </widget>
         </item>
         <item row="4" column="2">
          <widget class="QLabel" name="label4neighborpercent">
           <property name="text">
-           <string>0</string>
+           <string>/</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="QLabel" name="label4neighborpercent_2">
+          <property name="text">
+           <string>num</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QLabel" name="label4neighbor_2">
+          <property name="text">
+           <string>in</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="2">
+         <widget class="QLabel" name="label_12">
+          <property name="text">
+           <string>%</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0">
+         <widget class="QLabel" name="label4neighbor_3">
+          <property name="text">
+           <string>solution</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="1">
+         <widget class="QLabel" name="labelSolutionNode">
+          <property name="text">
+           <string>/</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="2">
+         <widget class="QLabel" name="labelSolutionNodePercent">
+          <property name="text">
+           <string>/</string>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="0">
+         <widget class="QLabel" name="label4neighbor_4">
+          <property name="text">
+           <string>accessed</string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="0">
+         <widget class="QLabel" name="label4neighbor_5">
+          <property name="text">
+           <string>trace</string>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="1">
+         <widget class="QLabel" name="labelAccessedNode">
+          <property name="text">
+           <string>/</string>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="2">
+         <widget class="QLabel" name="labelAccessedNodePercent">
+          <property name="text">
+           <string>/</string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="1">
+         <widget class="QLabel" name="labelTraceNode">
+          <property name="text">
+           <string>/</string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="2">
+         <widget class="QLabel" name="labelTraceNodePercent">
+          <property name="text">
+           <string>/</string>
           </property>
          </widget>
         </item>
@@ -345,6 +442,8 @@
     </property>
     <addaction name="actionWall"/>
     <addaction name="actionPath"/>
+    <addaction name="actionSolution"/>
+    <addaction name="actionAccessed"/>
    </widget>
    <widget class="QMenu" name="menuGen">
     <property name="title">
@@ -355,8 +454,16 @@
     <addaction name="actionPrim"/>
     <addaction name="actionDiv"/>
    </widget>
+   <widget class="QMenu" name="menuSolve">
+    <property name="title">
+     <string>Solve algorithm</string>
+    </property>
+    <addaction name="actionLeftHand"/>
+    <addaction name="actionRightHand"/>
+   </widget>
    <addaction name="menu"/>
    <addaction name="menuGen"/>
+   <addaction name="menuSolve"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -425,6 +532,41 @@
    </property>
    <property name="text">
     <string>Recursive division</string>
+   </property>
+  </action>
+  <action name="actionSolution">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Solution</string>
+   </property>
+  </action>
+  <action name="actionAccessed">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Accessed</string>
+   </property>
+  </action>
+  <action name="actionLeftHand">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Wall follower(Left hand)</string>
+   </property>
+  </action>
+  <action name="actionRightHand">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Wall follower(Right hand)</string>
    </property>
   </action>
  </widget>
