fix spelling issue

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>878</width>
-    <height>592</height>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,7 +29,7 @@
          <x>0</x>
          <y>0</y>
          <width>650</width>
-         <height>508</height>
+         <height>516</height>
         </rect>
        </property>
        <property name="sizePolicy">
@@ -606,7 +606,7 @@
    </widget>
    <widget class="QMenu" name="menuSolve">
     <property name="title">
-     <string>Solve algorithm</string>
+     <string>Solving algorithm</string>
     </property>
     <addaction name="actionLeftHand"/>
     <addaction name="actionRightHand"/>
